--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,7 @@ obj/
 /packages/
 riderModule.iml
 /_ReSharper.Caches/
-.idea/.idea.ConsoleApplication1/.idea/indexLayout.xml
-.idea/.idea.ConsoleApplication1/.idea/vcs.xml
+.idea/
 ConsoleApplication1.sln
 ConsoleApplication1/ConsoleApplication1.csproj
 ConsoleApplication1/Properties/AssemblyInfo.cs
