--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ ConsoleApplication1.sln
 ConsoleApplication1/ConsoleApplication1.csproj
 ConsoleApplication1/Properties/AssemblyInfo.cs
 
+Problems/ConsoleApplication1.csproj
+Problems/Properties/AssemblyInfo.cs
